kubernetes/k8s-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /users
            backend:
              service:
                name: users
                port:
                  number: 80
          - pathType: Prefix
            path: /offers
            backend:
              service:
                name: offers-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /routes
            backend:
              service:
                name: routes-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /posts
            backend:
              service:
                name: posts-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /rf003
            backend:
              service:
                name: rf003-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /rf004
            backend:
              service:
                name: rf004-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /rf005
            backend:
              service:
                name: rf005-kubernates-service
                port:
                  number: 80
          - pathType: Prefix
            path: /scores
            backend:
              service:
                name: scores-kubernates-service
                port:
                  number: 80
